--- a/index.html
+++ b/index.html
@@ -306,12 +306,10 @@
         <!-- Vídeo de testimonio -->
         <h4>Video exitoso de la terapia familirar</h4>
         <video width="100%" height="400" controls>
-            <source src="ssstik.io_1742462929272.mp4" type="video/mp4">
+            <source src="video3.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de vídeo.
         </video>
     </div>
-
-
 
     <div class="se-busca">
         <img src="busca.png" alt="Se busca">
