--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <!-- Agregamos el vídeo aquí -->
         <h4>Vídeo de Testimonio de Éxito en el Tratamiento del Autismo</h4>
         <video width="100%" height="400" controls>
-            <source src="video_20241203_161559.mp4" type="video/mp4">
+            <source src="video1.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de vídeo.
         </video>
     </div>
