--- a/index.html
+++ b/index.html
@@ -315,7 +315,32 @@
         <p>Se busca ex doctor de clinicas aflonso acusado de violaciones y crimenes de guerra se le acusa  de vilaciones a pacientes es un pedfilo psicopata "Apoya a las victimas paulita a quedado trumatixzada donda 1 euro"</p>
     </div>
 
+
+
+
+    <!-- Nueva cura contra la depresión -->
+    <div class="servicio">
+        <h3>Cura contra la Depresión</h3>
+        <p class="explicacion">Nuestras clinicas ofrecen curas contra la depresion con uno de los mejores psicologos graduados con primaria y la mayoria han llegado hasta segundo de la eso con gestio de las emcions aprobados</p>
+        <ul>
+            <li>Técnicas de electroshock</li>
+            <li>Uso de fentanilo y otros medicamntos(Reutilizamos las geringas para salvar el planeta</li>
+            <li>Solo por un eruo al año</li>
+        </ul>
+        
+        <!-- Vídeo de explicación -->
+        <h4>Vídeo de Explicación de la Cura contra la Depresión</h4>
+        <video width="100%" height="400" controls>
+            <source src="video4.mp4" type="video/mp4">
+            Tu navegador no soporta el elemento de vídeo.
+        </video>
+    </div>
+
 </section>
+
+
+
+
     
     <footer id="contacto">
         <p><strong>Charo Technologies © <span id="year"></span></strong></p>
