--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clínicas Alfonso</title>
+    <meta name="keywords" content="educación, salud, clínicas, tratamiento">
+    <meta name="description" content="Sitio web educativo sobre clínicas y tratamientos de salud">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -198,9 +201,10 @@
     
     <div class="container">
         <section id="inicio" class="seccion">
-            <h2>Mejor clinica de las cloacas</h2>
+            <h2>Una de las mejores clínicas de España</h2>
             <div class="imagen-container">
                 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-K1hQLevXHqDzSgStHkRAGRe1WCOxD8.png" alt="Instalaciones históricas">
+                <div class="imagen-caption">Imagen histórica - Nuestras instalaciones han sido completamente renovadas</div>
             </div>
             <p>Clincas alfonso la majeor sanidad de las clocas se garantiza doctores hasta segundo de la ESO con un curso online Yotube</p>
             <p>Contamos con un equipo de profesionales altamente cualificados y con amplia experiencia en diversas especialidades médicas.</p>
@@ -221,13 +225,12 @@
                 </div>
                 
                 <div class="servicio">
-                    <h3>Transecualismo</h3>
-                    <p>Operamos con visturi de altisima calidad de 1962 poco oxidados i con imagens de Meta Ai y tenemos los mejores sedantes de porros moha las geringas simpre recicladas para salvar el plantea</p>
+                    <h3>Operaciones</h3>
+                    <p>operamos con visturi de altisima calidad de 1932 poco oxidados i con imagens de chatgpt4.5</p>
                     <ul>
-                        <li>Cirugia estetica con plastico del chino</li>
-                        <li>Cambios de sexo realistas</li>
-                        <li>Anestesia general con fentanilo de estados unidos</li>
-                        <li>Vagina plastia usamos cuter arracamos el miebro y procedemos hacer una linea(Tienes que firmar ahi posibilidades de que salgas con daños irrebersibles como paulita)</li>
+                        <li>cirugia estetica con plastico del chino</li>
+                        <li>cambios de sexo realistas</li>
+                        <li>anestesia general con fentanilo de estados unidos</li>
                     </ul>
                 </div>
             </div>
@@ -237,6 +240,7 @@
             <h2>Una de las mejores clínicas de pediatría</h2>
             <div class="imagen-container">
                 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-bcuU3eRel7GBw4tUDyGIgI6Mu0YPx7.png" alt="Incubadora moderna">
+                <div class="imagen-caption">Aquí tenemos una de nuestras incubadoras más modernas de las cloacas</div>
             </div>
             <p>Nuestro departamento de pediatría cuenta con los mejores especialistas y equipamiento moderno para el cuidado de los más pequeños. Ofrecemos atención integral desde el nacimiento hasta la adolescencia.</p>
         </section>
@@ -309,6 +313,14 @@
         </video>
     </div>
 
+    <div class="se-busca">
+        <img src="busca.png" alt="Se busca">
+        <p>Se busca ex doctor de clinicas aflonso acusado de violaciones y crimenes de guerra se le acusa  de vilaciones a pacientes es un pedfilo psicopata "Apoya a las victimas paulita a quedado trumatixzada donda 1 euro"</p>
+    </div>
+
+
+
+
     <!-- Nueva cura contra la depresión -->
     <div class="servicio">
         <h3>Cura contra la Depresión</h3>
@@ -326,12 +338,6 @@
             Tu navegador no soporta el elemento de vídeo.
         </video>
     </div>
-
-    <div class="se-busca">
-        <img src="busca.png" alt="Se busca">
-        <p>Se busca ex doctor de clinicas aflonso acusado de violaciones y crimenes de guerra se le acusa  de vilaciones a pacientes es un pedfilo psicopata "Apoya a las victimas paulita a quedado trumatixzada donda 1 euro"</p>
-    </div>
-
 
 </section>
 
@@ -427,6 +433,18 @@
                 window.close();
             }
         }, 1000);
+    </script>
+
+
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "EducationalOrganization",
+          "name": "Clínicas Alfonso",
+          "description": "Sitio web educativo sobre clínicas y tratamientos de salud",
+          "url": "https://example.com"
+        }
     </script>
 
 </body>
